--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-ECHO is on.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1>Aymen Shaif Al-adrysy </h1>
+
+<script src="app.js"></script>
+</body>
+</html>
