modfier the color font and backgound-color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <h1>Aymen Shaif Al-adrysy </h1>
+<p> add branch name = aladrysy_devloper</p>
 
 <script src="app.js"></script>
 </body>
